--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -21,7 +21,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#!"><b>Contact</b></a>
         </li>
-        <button type="button" class="btn btn-dark ms-3"><b>Sign In</b></button>
+        <button type="button" class="btn btn-dark ms-3" routerLink="/login" routerLinkActive="active"><b>Sign In</b></button>
         <button type="button" class="btn btn-dark ms-3"><i class="fa fa-user"></i><b></b></button>
       </ul>
     </div>
