nav bar style corrected

--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -21,8 +21,8 @@
         <li class="nav-item">
           <a class="nav-link" href="#!"><b>Contact</b></a>
         </li>
-        <button type="button" class="btn btn-dark ms-3" routerLink="/login" routerLinkActive="active"><b>Sign In</b></button>
-        <button type="button" class="btn btn-dark ms-3"><i class="fa fa-user"></i><b></b></button>
+        <button type="button" class="btn btn-dark ms-3" routerLink="/login" routerLinkActive="active" *ngIf="!getStatus()" ><b>Sign In</b></button>
+        <button type="button" class="btn btn-dark ms-3" *ngIf="getStatus()"><i class="fa fa-user" ></i><b></b></button>
       </ul>
     </div>
   </div>
