month and date of exam card fixed

--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -25,8 +25,8 @@
                 <div class="widget-49">
                     <div class="widget-49-title-wrapper">
                         <div class="widget-49-date-primary">
-                            <span class="widget-49-date-day">09</span>
-                            <span class="widget-49-date-month">{{exam.examDate}}</span>
+                            <span class="widget-49-date-day">{{getExamDate(exam.examDate)}}</span>
+                            <b><span class="widget-49-date-month">{{getExamMonth(exam.examDate)}}</span></b>
                         </div>
                         <div class="widget-49-meeting-info">
                             <h4><span class="widget-49-pro-title">{{exam.teacherName}}</span></h4>
