--- a/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
+++ b/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
@@ -21,8 +21,8 @@
                       <div class="widget-49">
                           <div class="widget-49-title-wrapper">
                               <div class="widget-49-date-success">
-                                  <span class="widget-49-date-day">22</span>
-                                  <span class="widget-49-date-month">{{exam.examDate}}</span>
+                                  <span class="widget-49-date-day">{{getExamDate(exam.examDate)}}</span>
+                                  <span class="widget-49-date-month">{{getExamMonth(exam.examDate)}}</span>
                               </div>
                               <div class="widget-49-meeting-info">
                                   <h4><span class="widget-49-pro-title">{{userDetails.fullName}}</span></h4>
