--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -24,9 +24,9 @@
             <div class="card-body pt-0">
                 <div class="widget-49">
                     <div class="widget-49-title-wrapper">
-                        <div class="widget-49-date-primary">
+                        <div class="widget-49-date-success">
                             <span class="widget-49-date-day">{{getExamDate(exam.examDate)}}</span>
-                            <b><span class="widget-49-date-month">{{getExamMonth(exam.examDate)}}</span></b>
+                            <span class="widget-49-date-month">{{getExamMonth(exam.examDate)}}</span>
                         </div>
                         <div class="widget-49-meeting-info">
                             <h4><span class="widget-49-pro-title">{{exam.teacherName}}</span></h4>
