teacherservice is private

--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -60,7 +60,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          Are you confirm to start exam(Exam ID : XXXX)?
+          Are you confirm to start exam(Exam Name : {{selectedExam.examName}})?
         </div>
         <form>
             <div class="modal-footer">
