--- a/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
+++ b/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
@@ -9,7 +9,7 @@
     <br><br>
   
       <div class="row">
-          <div class="col-lg-4"  *ngFor="let exam of examService.exams">
+          <div class="col-lg-4"  *ngFor="let exam of exams">
               <div class="card card-margin">
                   <div class="card-header no-border id">
                       <h3 class="card-title">{{exam.examName}}</h3>
