--- a/FrontEnd/src/app/nav-bar/nav-bar.component.css
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.css
@@ -32,3 +32,11 @@
   font-size: unset;
   height: 3.5rem;
 }
+
+h3 {
+  color: whitesmoke;
+}
+
+.offcanvas-header {
+  background-color: #0c8882;
+}
