--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -36,7 +36,8 @@
                     </div>
                     <br>
                     <div class="btn-button">
-                    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModalStart" [disabled]="!exam.hasStarted" >Start Exam </button>
+                    <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModalStart" [disabled]="!exam.hasStarted" *ngIf="!exam.hasStarted">Start Exam </button>
+                    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModalStart" *ngIf="exam.hasStarted"><b>Start Exam</b> </button>
                     <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModalLeave" (click)="onLeaveClick(exam._id)">Leave Exam </button>
                     </div>
                     <div class="widget-49-meeting-action">
@@ -119,3 +120,26 @@
         </div>
       </div>
     </div>
+
+    <!-- <div class="modal fade" id="exampleModalJoin" *ngIf="examStartModel.showModal" #content>
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Join New Exam</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="recipient-code" class="col-form-label"><h6>Exam Code:</h6></label>
+                <input type="text" class="form-control" id="recipient-code" placeholder="624db81ef3b5c46536c72936" ngDefaultControl [(ngModel)]="examStartModel.examCode" [ngModelOptions]="{standalone: true}" >
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="join()">Join</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div> -->
