--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.css
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.css
@@ -2,11 +2,11 @@ body{
     background: #F4F7FD;
     margin-top:20px;
   }
-  
+
   .card-margin {
     margin-bottom: 2.875rem;
   }
-  
+
   .card {
     border: 0;
     box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
@@ -25,7 +25,7 @@ body{
     border: 1px solid #000000;
     border-radius: 8px;
   }
-  
+
   .card .card-header.no-border {
     border: 0;
   }
@@ -42,12 +42,12 @@ body{
   .card-header:first-child {
     border-radius: calc(8px - 1px) calc(8px - 1px) 0 0;
   }
-  
+
   .widget-49 .widget-49-title-wrapper {
   display: flex;
   align-items: center;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-primary {
   display: flex;
   align-items: center;
@@ -58,21 +58,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-primary .widget-49-date-day {
   color: #4e73e5;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-primary .widget-49-date-month {
   color: #4e73e5;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-secondary {
   display: flex;
   align-items: center;
@@ -83,21 +83,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-secondary .widget-49-date-day {
   color: #dde1e9;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-secondary .widget-49-date-month {
   color: #dde1e9;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-success {
   display: flex;
   align-items: center;
@@ -108,21 +108,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-success .widget-49-date-day {
   color: #17d1bd;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-success .widget-49-date-month {
   color: #17d1bd;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-info {
   display: flex;
   align-items: center;
@@ -133,21 +133,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-info .widget-49-date-day {
   color: #36afff;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-info .widget-49-date-month {
   color: #36afff;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-warning {
   display: flex;
   align-items: center;
@@ -158,21 +158,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-warning .widget-49-date-day {
   color: #FFC868;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-warning .widget-49-date-month {
   color: #FFC868;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-danger {
   display: flex;
   align-items: center;
@@ -183,21 +183,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-danger .widget-49-date-day {
   color: #F95062;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-danger .widget-49-date-month {
   color: #F95062;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-light {
   display: flex;
   align-items: center;
@@ -208,21 +208,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-light .widget-49-date-day {
   color: #f7f9fa;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-light .widget-49-date-month {
   color: #f7f9fa;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-dark {
   display: flex;
   align-items: center;
@@ -233,21 +233,21 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-dark .widget-49-date-day {
   color: #394856;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-dark .widget-49-date-month {
   color: #394856;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-base {
   display: flex;
   align-items: center;
@@ -258,65 +258,65 @@ body{
   height: 4rem;
   border-radius: 50%;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-base .widget-49-date-day {
   color: #68CBD7;
   font-weight: 500;
   font-size: 1.5rem;
   line-height: 1;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-date-base .widget-49-date-month {
   color: #68CBD7;
   line-height: 1;
   font-size: 1rem;
   text-transform: uppercase;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-meeting-info {
   display: flex;
   flex-direction: column;
   margin-left: 1rem;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-meeting-info .widget-49-pro-title {
   color: #3c4142;
   font-size: 14px;
   }
-  
+
   .widget-49 .widget-49-title-wrapper .widget-49-meeting-info .widget-49-meeting-time {
   color: #057e2b;
   font-size: 13px;
   }
-  
+
   .widget-49 .widget-49-meeting-points {
   font-weight: 400;
   font-size: 13px;
   margin-top: .5rem;
   }
-  
+
   .widget-49 .widget-49-meeting-points .widget-49-meeting-item {
   display: list-item;
   color: #727686;
   }
-  
+
   .widget-49 .widget-49-meeting-points .widget-49-meeting-item span {
   margin-left: .5rem;
   }
-  
+
   .widget-49 .widget-49-meeting-action {
   text-align: right;
   }
-  
+
   .widget-49 .widget-49-meeting-action a {
   text-transform: uppercase;
   }
-  
+
   /* Backgrounds */
   .main-bg {
     background: rgb(255, 255, 255);
     background: linear-gradient( #ffffff, #a3fbf7);
-    height:100vh;
+    min-height:100vh;
     padding-top: 88px;
   }
   /*
@@ -324,68 +324,68 @@ body{
     display: flex;
     align-items: center;
   }
-  
-  
+
+
   .card-margin:hover {
     width: 101%;
     height: 101%;
   }*/
-  
-  
-  
+
+
+
   /*
   .modal-body {
     background-color: #58aa94;
   }
-  
+
   .modal-header {
     background-color: #1f6351;
   }
-  
+
   .form-control {
     background-color: #c6faec;
   }
-  
-  
-  
+
+
+
   .modal-body {
     color: white;
     background-color: #22ada8;
   }
-  
+
   .modal-header {
     color: white;
     background-color: #115f5c;
   }
-  
+
   .form-control {
     color: white;
     background-color: #63dcd8;
   }
-  
-  
+
+
   .createExam {
-  
+
   }
-  
+
   .card-header {
     text-align: right;
   }*/
-  
-  
+
+
   .title {
     color: rgb(193, 105, 58);
     font-size: 50px;
   }
-  
+
   .card-title {
     color: white;
   }
-  
+
   .bs-example{
     margin: 20px;
   }
-  
+
   .floatright {
     float: right;
   }
