--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -30,8 +30,8 @@
                         </div>
                         <div class="widget-49-meeting-info">
                             <h4><span class="widget-49-pro-title">{{exam.teacherName}}</span></h4>
-                            <span class="widget-49-meeting-time">Exam Finished</span>
-                            <span class="widget-49-meeting-time"><span>Duration: {{exam.duration}}</span></span>
+                            <span class="widget-49-meeting-time">Start at {{exam.startTime}}</span>
+                            <span class="widget-49-meeting-time"><span>Duration: {{exam.duration}} minutes</span></span>
                         </div>
                     </div>
                     <br>
