--- a/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
+++ b/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
@@ -38,7 +38,7 @@
                             <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModalDel" (click)="onClick(exam)">Delete Exam </button>
                           </div>
                           <div class="widget-49-meeting-action">
-                              <a class="btn btn-sm btn-flash-border-success" (click)="viewMoreRouting()">View MORE</a>
+                              <a class="btn btn-sm btn-flash-border-success" (click)="viewMoreRouting(exam)">View MORE</a>
                           </div>
                       </div>
                   </div>
