--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -21,21 +21,13 @@
         <h2>Participante List&nbsp;&nbsp;<i class="fa fa-users"></i></h2>
         <hr class="cl-head">
         <br><br>
-        &nbsp;&nbsp;&nbsp;
-        <span class="fa fa-user-circle"></span>
-        &nbsp;Md. Siam
-        <button type="button" class="btn-close" aria-label="Close"></button>
-        <hr>
-        &nbsp;&nbsp;&nbsp;
-        <span class="fa fa-user-circle"></span>
-        &nbsp;Md. Inzamam-Ul Haque Sobuz
-        <button type="button" class="btn-close" aria-label="Close"></button>
-        <hr>
-        &nbsp;&nbsp;&nbsp;
-        <span class="fa fa-user-circle"></span>
-        &nbsp;Raisul Islam Rahat
-        <button type="button" class="btn-close" aria-label="Close"></button>
-        <hr>
+        <div *ngFor="let participant of participants">
+          &nbsp;&nbsp;&nbsp;
+          <span class="fa fa-user-circle"></span>
+          &nbsp;{{participant.fullName}}
+          <button type="button" class="btn-close" aria-label="Close"></button>
+          <hr>
+        </div>
       </div>
       <div class="col">
         <h2>Notification&nbsp;&nbsp;<i class="fas fa-bell"></i></h2>
