--- a/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
+++ b/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
@@ -11,12 +11,18 @@
         <i class="fa fa-clock"></i> {{examDetails.startTime}} <br>
         <i class="fa fa-stopwatch"></i> {{examDetails.duration}} minutes <br>
         <br><br>
-        <div class="btn-button">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Invite </button>&nbsp;&nbsp;
-          <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModalEdit">Edit Exam </button>&nbsp;&nbsp;
-          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModalDel">Delete Exam </button>
+        <!-- <div class="btn-button">
+          <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModalStart" [disabled]="!exam.hasStarted" *ngIf="!examGoingOn(exam)" (click)="onLeaveClick(exam)">Start Exam </button>
+          <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModalStart" *ngIf="examGoingOn(exam)" (click)="onLeaveClick(exam)"><b>Start Exam</b> </button>
+          <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModalLeave" (click)="onLeaveClick(exam)">Leave Exam </button>
+          </div>
+      </div> -->
+      <div class="btn-button">
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModalStart" disabled>Start Exam </button>
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalStart" ><b>Start Exam</b> </button>&nbsp;&nbsp;
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModalLeave">Leave Exam </button>
         </div>
-      </div>
+    </div>
       <div class="col">
         <h2>Participante List&nbsp;&nbsp;<i class="fa fa-users"></i></h2>
         <hr class="cl-head">
@@ -24,17 +30,6 @@
         &nbsp;&nbsp;&nbsp;
         <span class="fa fa-user-circle"></span>
         &nbsp;Md. Siam
-        <button type="button" class="btn-close" aria-label="Close"></button>
-        <hr>
-        &nbsp;&nbsp;&nbsp;
-        <span class="fa fa-user-circle"></span>
-        &nbsp;Md. Inzamam-Ul Haque Sobuz
-        <button type="button" class="btn-close" aria-label="Close"></button>
-        <hr>
-        &nbsp;&nbsp;&nbsp;
-        <span class="fa fa-user-circle"></span>
-        &nbsp;Raisul Islam Rahat
-        <button type="button" class="btn-close" aria-label="Close"></button>
         <hr>
       </div>
     </div>
