--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h2>Exam Info</h2>
+        <h2>{{examDetails.examName}}</h2>
         <hr class="cl-head">
         <br><br>
 
