--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -1,14 +1,14 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-scroll fixed-top shadow-0 border-bottom border-dark">
   <div class="container">
-    <a class="navbar-brand" href="#!"><i class="fab fa-mdb fa-4x"></i></a>
+    <h1><a class="navbar-brand" href="" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> !BLINK</a></h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
       <i class="fas fa-bars"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <button type="button" class="btn btn-dark ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa fa-user" ></i><b></b></button>
+      <!-- <button type="button" class="btn btn-dark ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa fa-user" ></i><b></b></button> -->
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link" href="#!"><b>About</b></a>
