added question to exam (only for teacher for now)

--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -65,6 +65,8 @@
         </ul>
       </div>
     </div>
+    <object [data]="examDetails.question | safe" type="application/pdf" width="600" height="500"> </object>
+      
   </div>
 </div>
 
