--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <p>student-exam works!</p>
-
+<object [data]="examDetails.question | safe" type="application/pdf" width="600" height="500"> </object>
 siam
 <app-window-monitoring></app-window-monitoring>
 <app-screen-record></app-screen-record>
