--- a/FrontEnd/src/app/user-profile/user-profile.component.html
+++ b/FrontEnd/src/app/user-profile/user-profile.component.html
@@ -26,11 +26,11 @@
   </ul>
 
 
-  <!-- <input type="button"  value="Logout" /> -->
+  <!-- <input type="button"  value="Logout" />
 
   <button (click)="onLogout()"><i class="fas fa-sign-out-alt"></i></button>
 
-
+-->
 
 <!-- <table *ngIf="userDetails" class="table-fill">
     <thead>
